More finegrained configuration and handling of TLS and reconnection features. (#1254)
* Allowed to deactivate certificate validation
* fix: Fix OPCUA connection health check
* Added checks to prevent the creation of an invalid state via the REST API (#1281)
* Add jdk-8 optional support for jackson

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Co-authored-by: Sam Cao <sjtucaocao@gmail.com>
Co-authored-by: marregui <miguel.arregui@gmail.com>
Co-authored-by: Sam Cao <sam.cao@hivemq.com>