@@ -135,9 +135,7 @@ class OpcUaProtocolAdapterConfigTest {
 
         assertThat(config.getAuth()).isNull();
 
-        assertThat(config.getTls()).satisfies(tls -> {
-            assertThat(tls.enabled()).isFalse();
-        });
+        assertThat(config.getTls()).satisfies(tls -> assertThat(tls.enabled()).isFalse());
 
         assertThat(config.getOpcuaToMqttConfig()).isNotNull();
         assertThat(protocolAdapterConfig.getNorthboundMappings()).satisfiesExactly(mapping -> {
@@ -180,10 +178,12 @@ class OpcUaProtocolAdapterConfigTest {
                 null,
                 new Auth(new BasicAuth("my-username", "my-password"), new X509Auth(true)),
                 new Tls(true,
+                        TlsChecks.NONE,
                         new Keystore("my/keystore/path", "keystore-password", "private-key-password"),
                         new Truststore("my/truststore/path", "truststore-password")),
                 new OpcUaToMqttConfig(1, 1000),
-                new Security(BASIC128RSA15)
+                new Security(BASIC128RSA15),
+                null
         );
 
         final OpcUaProtocolAdapterFactory opcuaProtocolAdapterFactory =
@@ -201,9 +201,7 @@ class OpcUaProtocolAdapterConfigTest {
             assertThat(basic.get("username")).isEqualTo("my-username");
             assertThat(basic.get("password")).isEqualTo("my-password");
         });
-        assertThat((Map<String, Object>) authMap.get("x509")).satisfies(basic -> {
-            assertThat(basic.get("enabled")).isEqualTo(true);
-        });
+        assertThat((Map<String, Object>) authMap.get("x509")).satisfies(basic -> assertThat(basic.get("enabled")).isEqualTo(true));
 
         final Map<String, Object> tlsMap = (Map<String, Object>) config.get("tls");
         assertThat(tlsMap.get("enabled")).isEqualTo(true);
@@ -228,6 +226,7 @@ class OpcUaProtocolAdapterConfigTest {
                 null,
                 null,
                 new OpcUaToMqttConfig(1, 1000),
+                null,
                 null
         );
 
@@ -252,7 +251,7 @@ class OpcUaProtocolAdapterConfigTest {
         final File path = Path.of(resource.toURI()).toFile();
 
         final HiveMQConfigEntity configEntity = loadConfig(path);
-        final ProtocolAdapterEntity adapterEntity = configEntity.getProtocolAdapterConfig().get(0);
+        final ProtocolAdapterEntity adapterEntity = configEntity.getProtocolAdapterConfig().getFirst();
 
         final ProtocolAdapterConfigConverter converter = createConverter();
 
